<resources>
    <string name="app_name">Easy_Lang_Dictionary</string>
    <string name="title">EasyLang Dictionary</string>
    <string name="choose_profile">Choose profile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="profile_1">Profile 1</string>
    <string name="change_password">Change password</string>
    <string name="todo">TODO</string>
    <string name="name">Name:</string>
    <string name="surname">Surname:</string>
    <string name="email">Email:</string>
    <string name="profile_protection">Profile protection:</string>
    <string name="password">Password:</string>
    <string name="language">Language:</string>
    <string name="level_of_language">Level of language:</string>
    <string name="name1">Name</string>
    <string name="surname1">Surname</string>
    <string name="email1">Email</string>
    <string name="protection">Protection</string>
    <string name="password1">Password</string>
    <string name="language1">Language</string>
    <string name="level">Level</string>
    <string name="easylang_dictionary">EasyLang\nDictionary</string>
    <string name="add_new">Add new</string>
    <string name="translator">Translator</string>
    <string name="parser">Parser</string>
    <string name="dictionary">Dictionary</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <string name="create_new">Create new</string>
    <string name="change_profile">Change profile</string>
    <string name="confirm">confirm</string>
    <string name="enter_text">Enter text</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_your_surname">Enter your surname</string>
    <string name="enter_email">Enter email address</string>
    <string name="enter_password">Enter password</string>
    <string name="edit_profile">Edit profile</string>
    <string name="level1">Level:</string>
    <string name="required">Required</string>
    <string name="b1">B1</string>
    <string name="a1">A1</string>
    <string name="a2">A2</string>
    <string name="b2">B2</string>
    <string name="c1">C1</string>
    <string name="c2">C2</string>
    <string name="translation">Translation</string>
    <string name="error_messege">Oops! Something went wrong!</string>
    <string name="word_list_1">word list 1</string>
    <string name="word">Word</string>
    <string name="translate">Translate</string>
    <string name="enter_word">Enter word</string>
    <string name="enter_translate">Enter translate</string>
    <string name="add_to_word_list">add to word list</string>
</resources>