<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout7"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments_MainActivity2.EditProfileFragment">

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/deleteButton"
        style="@style/buttons"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginTop="70dp"
        android:background="@drawable/rectangle_2"
        app:layout_constraintEnd_toStartOf="@+id/guideline12"
        app:layout_constraintTop_toBottomOf="@+id/rectangle_8"
        app:srcCompat="@drawable/bin" />

    <View
        android:id="@+id/rectangle_8"
        android:layout_width="370dp"
        android:layout_height="100dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/rectangle_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner2" />

    <View
        android:id="@+id/rectangle_7"
        android:layout_width="370dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/rectangle_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rectangle_6" />

    <EditText
        android:id="@+id/editTextTextSurname"
        style="@style/r16"
        android:layout_width="265dp"
        android:layout_height="40dp"
        android:backgroundTint="@android:color/transparent"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Surname"
        android:textColorHint="@color/title"
        app:layout_constraintBottom_toBottomOf="@+id/rectangle_7"
        app:layout_constraintEnd_toEndOf="@+id/rectangle_7"
        app:layout_constraintTop_toTopOf="@+id/rectangle_7" />

    <View
        android:id="@+id/rectangle_6"
        android:layout_width="370dp"
        android:layout_height="40dp"
        android:layout_marginTop="22dp"
        android:background="@drawable/rectangle_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView9" />

    <View
        android:id="@+id/rectangle_34"
        android:layout_width="370dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/rectangle_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rectangle_4" />

    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="265dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/rectangle_1"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="@+id/rectangle_34"
        app:layout_constraintTop_toBottomOf="@+id/rectangle_4" />

    <View
        android:id="@+id/rectangle_4"
        android:layout_width="370dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/rectangle_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rectangle_" />

    <View
        android:id="@+id/rectangle_"
        android:layout_width="370dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/rectangle_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rectangle_7" />

    <EditText
        android:id="@+id/editTextTextEmail"
        style="@style/r16"
        android:layout_width="265dp"
        android:layout_height="40dp"
        android:backgroundTint="@android:color/transparent"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Email"
        android:textColorHint="@color/title"
        app:layout_constraintBottom_toBottomOf="@+id/rectangle_"
        app:layout_constraintEnd_toEndOf="@+id/rectangle_"
        app:layout_constraintTop_toTopOf="@+id/rectangle_"
        tools:ignore="TextFields" />

    <EditText
        android:id="@+id/editTextTextPassword"
        style="@style/r16"
        android:layout_width="265dp"
        android:layout_height="40dp"
        android:layout_marginEnd="1dp"
        android:backgroundTint="@android:color/transparent"
        android:ems="10"
        android:inputType="textPassword"
        android:text="Password"

        android:textColorHint="@color/title"
        app:layout_constraintBottom_toBottomOf="@+id/rectangle_4"
        app:layout_constraintEnd_toEndOf="@+id/rectangle_4"
        app:layout_constraintTop_toTopOf="@+id/rectangle_4" />

    <View
        android:id="@+id/group_10"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:background="@drawable/rectangle_4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/rectangle_6" />


    <View
        android:id="@+id/group_13"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:background="@drawable/rectangle_4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/rectangle_7" />


    <View
        android:id="@+id/group_12"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:background="@drawable/rectangle_4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/rectangle_" />

    <View
        android:id="@+id/group_14"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:background="@drawable/rectangle_4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/rectangle_4" />

    <View
        android:id="@+id/group_15"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/rectangle_4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rectangle_4" />

    <View
        android:id="@+id/group_16"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:background="@drawable/rectangle_4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/rectangle_8" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/image_4"
        tools:ignore="ImageContrastCheck" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/confirmButton"
        style="@style/buttons"
        android:layout_width="150dp"
        android:layout_height="35dp"
        android:layout_gravity="right"
        android:layout_marginTop="35dp"
        android:background="@drawable/button_1"
        android:text="@string/confirm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rectangle_8" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="390dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <TextView
        android:id="@+id/textView2"
        style="@style/r18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name1"
        app:layout_constraintBottom_toBottomOf="@+id/group_10"
        app:layout_constraintEnd_toEndOf="@+id/group_10"
        app:layout_constraintStart_toStartOf="@+id/rectangle_6"
        app:layout_constraintTop_toTopOf="@+id/group_10" />

    <TextView
        android:id="@+id/textView15"
        style="@style/r18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/surname1"
        app:layout_constraintBottom_toBottomOf="@+id/group_13"
        app:layout_constraintEnd_toEndOf="@+id/group_13"
        app:layout_constraintStart_toStartOf="@+id/rectangle_7"
        app:layout_constraintTop_toTopOf="@+id/group_13" />

    <TextView
        android:id="@+id/textView16"
        style="@style/r18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email1"
        app:layout_constraintBottom_toBottomOf="@+id/group_12"
        app:layout_constraintEnd_toEndOf="@+id/group_12"
        app:layout_constraintStart_toStartOf="@+id/rectangle_"
        app:layout_constraintTop_toTopOf="@+id/group_12" />

    <TextView
        android:id="@+id/textView18"
        style="@style/r18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password1"
        app:layout_constraintBottom_toBottomOf="@+id/group_14"
        app:layout_constraintEnd_toEndOf="@+id/group_14"
        app:layout_constraintStart_toStartOf="@+id/rectangle_4"
        app:layout_constraintTop_toTopOf="@+id/group_14" />

    <TextView
        android:id="@+id/textView19"
        style="@style/r18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/language1"
        app:layout_constraintBottom_toBottomOf="@+id/group_15"
        app:layout_constraintEnd_toEndOf="@+id/group_15"
        app:layout_constraintStart_toStartOf="@+id/group_15"
        app:layout_constraintTop_toTopOf="@+id/group_15" />

    <TextView
        android:id="@+id/textView20"
        style="@style/r18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/level"
        app:layout_constraintBottom_toBottomOf="@+id/group_16"
        app:layout_constraintEnd_toEndOf="@+id/group_16"
        app:layout_constraintStart_toStartOf="@+id/rectangle_8"
        app:layout_constraintTop_toTopOf="@+id/group_16" />

    <EditText
        android:id="@+id/editTextTextName"
        style="@style/r16"
        android:layout_width="265dp"
        android:layout_height="40dp"
        android:backgroundTint="@android:color/transparent"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Name"
        android:textColorHint="@color/title"
        app:layout_constraintBottom_toBottomOf="@+id/rectangle_6"
        app:layout_constraintEnd_toStartOf="@+id/guideline12"
        app:layout_constraintTop_toTopOf="@+id/rectangle_6" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="360dp"
        android:layout_height="40dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/rectangle_6"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/rectangle_8"
        app:layout_constraintEnd_toStartOf="@+id/guideline12"
        app:layout_constraintStart_toStartOf="@+id/guideline13"
        app:layout_constraintTop_toTopOf="@+id/rectangle_8">

        <RadioButton
            android:id="@+id/radioButton1"
            style="@style/r16"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/a1" />

        <RadioButton
            android:id="@+id/radioButton2"
            style="@style/r16"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/a2" />

        <RadioButton
            android:id="@+id/radioButton3"
            style="@style/r16"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/b1" />

        <RadioButton
            android:id="@+id/radioButton4"
            style="@style/r16"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/b2" />

        <RadioButton
            android:id="@+id/radioButton5"
            style="@style/r16"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/c1" />

        <RadioButton
            android:id="@+id/radioButton6"
            style="@style/r16"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/c2" />
    </RadioGroup>


</androidx.constraintlayout.widget.ConstraintLayout>