<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    tools:context=".fragments_MainActivity.NewProfileFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:id="@+id/scrollingLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="128dp"
                android:layout_height="128dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:contentDescription="@string/todo"
                app:srcCompat="@drawable/image_4" />

            <TextView
                android:id="@+id/textView4"
                style="@style/r18"
                android:layout_width="370dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/name" />


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/linearLayoutCompat2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp">

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/name_icon" />

                <View
                    android:id="@+id/group_1"
                    android:layout_width="320dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="5dp"
                    android:background="@drawable/rectangle_5"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/imageView5"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.6" />

                <EditText
                    android:id="@+id/editTextTextPersonName2"
                    android:layout_width="305dp"
                    android:layout_height="40dp"
                    android:ems="10"
                    android:inputType="textCapWords"
                    android:textColorHighlight="@color/subTitle"
                    android:hint="@string/enter_your_name"
                    android:backgroundTint="@android:color/transparent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/group_1"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="@+id/group_1"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/textView"
                style="@style/r18"
                android:layout_width="370dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/surname" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/name_icon" />

                <View
                    android:id="@+id/group_2"
                    android:layout_width="320dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="5dp"
                    android:background="@drawable/rectangle_5" />

            </androidx.appcompat.widget.LinearLayoutCompat>


            <TextView
                android:id="@+id/textView5"
                style="@style/r18"
                android:layout_width="370dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/email" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/carbon_email" />

                <View
                    android:id="@+id/group_3"
                    android:layout_width="320dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="5dp"
                    android:background="@drawable/rectangle_5" />
            </androidx.appcompat.widget.LinearLayoutCompat>


            <View
                android:id="@+id/line_10"
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:layout_marginTop="14dp"
                android:background="@drawable/line_10" />


            <TextView
                android:id="@+id/textView7"
                style="@style/r18"
                android:layout_width="370dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/password" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/lock_open" />

                <View
                    android:id="@+id/group_5"
                    android:layout_width="320dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="5dp"
                    android:background="@drawable/rectangle_5" />

            </androidx.appcompat.widget.LinearLayoutCompat>


            <View
                android:id="@+id/line_11"
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:layout_marginTop="14dp"
                android:background="@drawable/line_10" />

            <TextView
                android:id="@+id/textView8"
                style="@style/r18"
                android:layout_width="370dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:text="@string/language" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/language_icon" />

                <View
                    android:id="@+id/group_6"
                    android:layout_width="165dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="5dp"
                    android:background="@drawable/rectangle_3" />
            </androidx.appcompat.widget.LinearLayoutCompat>


            <TextView
                android:id="@+id/textView9"
                style="@style/r18"
                android:layout_width="370dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/level_of_language" />


            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <View
                android:id="@+id/view"
                android:layout_width="340dp"
                android:layout_height="65dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/rectangle_6" />

            <androidx.appcompat.widget.AppCompatButton
                style="@style/buttons"
                android:layout_width="150dp"
                android:layout_height="35dp"
                android:layout_gravity="right"
                android:text="@string/confirm"
                android:layout_marginTop="35dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/button_1"/>
        </LinearLayout>
    </ScrollView>
</androidx.appcompat.widget.LinearLayoutCompat>